src/index.css
@import 'tailwindcss';

@custom-variant dark (&:where(.dark, .dark *));

:root.dark {
    --background: oklch(0.1408 0.0044 285.8229);
    --foreground: oklch(0.9851 0 0);
    --card: oklch(0.2103 0.0059 285.8852);
    --card-foreground: oklch(0.9851 0 0);
    --popover: oklch(0.2103 0.0059 285.8852);
    --popover-foreground: oklch(0.9851 0 0);
    --primary: oklch(0.8606 0.1731 91.9357);
    --primary-foreground: oklch(0.2739 0.0055 286.0326);
    --secondary: oklch(0.2739 0.0055 286.0326);
    --secondary-foreground: oklch(0.9851 0 0);
    --muted: oklch(0.2739 0.0055 286.0326);
    --muted-foreground: oklch(0.7118 0.0129 286.0665);
    --accent: oklch(0.2739 0.0055 286.0326);
    --accent-foreground: oklch(0.9851 0 0);
    --destructive: oklch(0.6368 0.2078 25.3313);
    --destructive-foreground: oklch(0.9851 0 0);
    --border: oklch(0.2739 0.0055 286.0326);
    --input: oklch(0.2739 0.0055 286.0326);
    --ring: oklch(0.8711 0.0055 286.286);
    --chart-1: oklch(0.8606 0.1731 91.9357);
    --chart-2: oklch(0.5854 0.2041 277.1173);
    --chart-3: oklch(0.7227 0.192 149.5793);
    --chart-4: oklch(0.6368 0.2078 25.3313);
    --chart-5: oklch(0.6268 0.2325 303.9004);
    --sidebar: oklch(0.1689 0.0021 286.1774);
    --sidebar-foreground: oklch(0.9851 0 0);
    --sidebar-primary: oklch(0.8606 0.1731 91.9357);
    --sidebar-primary-foreground: oklch(0.2739 0.0055 286.0326);
    --sidebar-accent: oklch(0.2739 0.0055 286.0326);
    --sidebar-accent-foreground: oklch(0.9851 0 0);
    --sidebar-border: oklch(0.2739 0.0055 286.0326);
    --sidebar-ring: oklch(0.8711 0.0055 286.286);
    --font-sans: 'Inter', ui-sans-serif, system-ui, sans-serif;
    --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
    --font-mono:
        ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
        'Liberation Mono', 'Courier New', monospace;
    --radius: 0.5rem;
    --shadow-x: 0rem;
    --shadow-y: 0.125rem;
    --shadow-blur: 0.25rem;
    --shadow-spread: 0rem;
    --shadow-opacity: 0.25;
    --shadow-color: 0 0 0;
    --shadow-2xs: 0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.13);
    --shadow-xs: 0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.13);
    --shadow-sm:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.25),
        0rem 1px 2px -1px hsl(0 0 0 / 0.25);
    --shadow:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.25),
        0rem 1px 2px -1px hsl(0 0 0 / 0.25);
    --shadow-md:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.25),
        0rem 2px 4px -1px hsl(0 0 0 / 0.25);
    --shadow-lg:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.25),
        0rem 4px 6px -1px hsl(0 0 0 / 0.25);
    --shadow-xl:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.25),
        0rem 8px 10px -1px hsl(0 0 0 / 0.25);
    --shadow-2xl: 0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.63);
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-destructive-foreground: var(--destructive-foreground);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);

    --font-sans: var(--font-sans);
    --font-mono: var(--font-mono);
    --font-serif: var(--font-serif);

    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);

    --shadow-2xs: var(--shadow-2xs);
    --shadow-xs: var(--shadow-xs);
    --shadow-sm: var(--shadow-sm);
    --shadow: var(--shadow);
    --shadow-md: var(--shadow-md);
    --shadow-lg: var(--shadow-lg);
    --shadow-xl: var(--shadow-xl);
    --shadow-2xl: var(--shadow-2xl);
}

:root {
    --background: oklch(0.931 0 0);
    --foreground: oklch(0.1408 0.0044 285.8229);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.1408 0.0044 285.8229);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.1408 0.0044 285.8229);
    --primary: oklch(0.8606 0.1731 91.9357);
    --primary-foreground: oklch(0.2739 0.0055 286.0326);
    --secondary: oklch(0.9674 0.0013 286.3752);
    --secondary-foreground: oklch(0.2103 0.0059 285.8852);
    --muted: oklch(0.9674 0.0013 286.3752);
    --muted-foreground: oklch(0.5517 0.0138 285.9385);
    --accent: oklch(0.9674 0.0013 286.3752);
    --accent-foreground: oklch(0.2103 0.0059 285.8852);
    --destructive: oklch(0.6368 0.2078 25.3313);
    --destructive-foreground: oklch(0.9851 0 0);
    --border: oklch(0.9197 0.004 286.3202);
    --input: oklch(0.9197 0.004 286.3202);
    --ring: oklch(0.7118 0.0129 286.0665);
    --chart-1: oklch(0.8606 0.1731 91.9357);
    --chart-2: oklch(0.5854 0.2041 277.1173);
    --chart-3: oklch(0.7227 0.192 149.5793);
    --chart-4: oklch(0.6368 0.2078 25.3313);
    --chart-5: oklch(0.6268 0.2325 303.9004);
    --sidebar: oklch(0.9551 0 0);
    --sidebar-foreground: oklch(0.1408 0.0044 285.8229);
    --sidebar-primary: oklch(0.8606 0.1731 91.9357);
    --sidebar-primary-foreground: oklch(0.2739 0.0055 286.0326);
    --sidebar-accent: oklch(0.9674 0.0013 286.3752);
    --sidebar-accent-foreground: oklch(0.2103 0.0059 285.8852);
    --sidebar-border: oklch(0.9197 0.004 286.3202);
    --sidebar-ring: oklch(0.7118 0.0129 286.0665);
    --font-sans: 'Inter', ui-sans-serif, system-ui, sans-serif;
    --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
    --font-mono:
        ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
        'Liberation Mono', 'Courier New', monospace;
    --radius: 0.5rem;
    --shadow-x: 0rem;
    --shadow-y: 0.125rem;
    --shadow-blur: 0.25rem;
    --shadow-spread: 0rem;
    --shadow-opacity: 0.05;
    --shadow-color: 0 0 0;
    --shadow-2xs: 0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.03);
    --shadow-xs: 0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.03);
    --shadow-sm:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.05),
        0rem 1px 2px -1px hsl(0 0 0 / 0.05);
    --shadow:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.05),
        0rem 1px 2px -1px hsl(0 0 0 / 0.05);
    --shadow-md:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.05),
        0rem 2px 4px -1px hsl(0 0 0 / 0.05);
    --shadow-lg:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.05),
        0rem 4px 6px -1px hsl(0 0 0 / 0.05);
    --shadow-xl:
        0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.05),
        0rem 8px 10px -1px hsl(0 0 0 / 0.05);
    --shadow-2xl: 0rem 0.125rem 0.25rem 0rem hsl(0 0 0 / 0.13);
    --tracking-normal: 0em;
    --spacing: 0.25rem;
}

@layer base {
    body {
        letter-spacing: var(--tracking-normal);
    }
}

@theme {
    /* Keyframes */
    @keyframes accordion-down {
        from {
            height: 0;
        }
        to {
            height: var(--radix-accordion-content-height);
        }
    }

    @keyframes accordion-up {
        from {
            height: var(--radix-accordion-content-height);
        }
        to {
            height: 0;
        }
    }

    /* Animation utilities */
    --animate-accordion-down: accordion-down 0.2s ease-out;
    --animate-accordion-up: accordion-up 0.2s ease-out;
}

